--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
-  
   <display-name>Assignment2 - The Mammoth Address Book!</display-name>
-  
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
   </welcome-file-list>
-
   <servlet>
     <servlet-name>ControllerServlet</servlet-name>
     <servlet-class>a00222500.assmt2.servlet.ControllerServlet</servlet-class>
@@ -31,12 +28,10 @@
       <param-value>compjava</param-value>
     </init-param>
   </servlet>
-  
   <servlet-mapping>
     <servlet-name>ControllerServlet</servlet-name>
     <url-pattern>/jsp-start/query_database</url-pattern>
   </servlet-mapping>
-  
   <context-param>
     <param-name>qmessage</param-name>
     <param-value>Here is the result of your query:</param-value>
@@ -57,76 +52,72 @@
     <param-name>refreshmessage</param-name>
     <param-value>Application will return to start page in 5 seconds</param-value>
   </context-param>
-  
   <login-config>
-    	<auth-method>FORM</auth-method>
-    	<form-login-config>
-      		<form-login-page>/admin/login.jsp</form-login-page>
-      		<form-error-page>/admin/login-error.jsp</form-error-page>
-    	</form-login-config>
-  	</login-config>
-  	
-  	<security-role>
-  		<role-name>user</role-name>
-  	</security-role>
-  	<security-role>
-    	<role-name>admin</role-name>
-  	</security-role>
-  	
-  	<!-- Resources only available to admin and user -->
-	<security-constraint>
-    	<web-resource-collection>
-      		<web-resource-name>Start</web-resource-name>
-      		<url-pattern>/jsp-start/*</url-pattern>
-    	</web-resource-collection>
-    	<auth-constraint>
-      		<role-name>user</role-name>
-      		<role-name>admin</role-name>
-    	</auth-constraint>
-  	</security-constraint>
-	
-	<!-- Resources only available to admin and user -->
-	<security-constraint>
-    	<web-resource-collection>
-      		<web-resource-name>User</web-resource-name>
-      		<url-pattern>/jsp-user/*</url-pattern>
-    	</web-resource-collection>
-    	<auth-constraint>
-      		<role-name>user</role-name>
-      		<role-name>admin</role-name>
-    	</auth-constraint>
-  	</security-constraint>	
-  	
-  	<!-- Resources only available to admin -->
-  	<security-constraint>
-    	<web-resource-collection>
-      		<web-resource-name>Admin</web-resource-name>
-      		<url-pattern>/WEB-INF/jsp-admin/*</url-pattern>
-    	</web-resource-collection>
-    	<auth-constraint>
-      		<role-name>admin</role-name>
-    	</auth-constraint>
-  	</security-constraint>
-  	
-  	<!-- Servlet to logout the user. -->
-  	<servlet>
-    	<servlet-name>Logout</servlet-name>
-    	<servlet-class>a00222500.assmt2.logout.LogoutServlet</servlet-class>
-  	</servlet>
-  	<servlet-mapping>
-    	<servlet-name>Logout</servlet-name>
-    	<url-pattern>/jsp-start/logout</url-pattern>
-  	</servlet-mapping>
-  	
-  	<!-- Turn off invoker. Send requests 
-       to index.html. -->
-	<servlet>
-    	<servlet-name>NoInvoker</servlet-name>
-    	<servlet-class>a00222500.assmt2.servlet.NoInvokerServlet</servlet-class>
-  	</servlet>
-  	<servlet-mapping>
-    	<servlet-name>NoInvoker</servlet-name>
-    	<url-pattern>/servlet/*</url-pattern>
-  	</servlet-mapping>
+    <auth-method>FORM</auth-method>
+    <form-login-config>
+      <form-login-page>/admin/login.jsp</form-login-page>
+      <form-error-page>/admin/login-error.jsp</form-error-page>
+    </form-login-config>
+  </login-config>
+  <security-role>
+    <role-name>user</role-name>
+  </security-role>
+  <security-role>
+    <role-name>admin</role-name>
+  </security-role>
+  <security-constraint>
+    <web-resource-collection>
+      <web-resource-name>Start</web-resource-name>
+      <url-pattern>/jsp-start/*</url-pattern>
+    </web-resource-collection>
+    <auth-constraint>
+      <role-name>user</role-name>
+      <role-name>admin</role-name>
+    </auth-constraint>
+  </security-constraint>
+  <security-constraint>
+    <web-resource-collection>
+      <web-resource-name>User</web-resource-name>
+      <url-pattern>/jsp-user/*</url-pattern>
+    </web-resource-collection>
+    <auth-constraint>
+      <role-name>user</role-name>
+      <role-name>admin</role-name>
+    </auth-constraint>
+  </security-constraint>
+  <security-constraint>
+    <web-resource-collection>
+      <web-resource-name>Admin</web-resource-name>
+      <url-pattern>/WEB-INF/jsp-admin/*</url-pattern>
+    </web-resource-collection>
+    <auth-constraint>
+      <role-name>admin</role-name>
+    </auth-constraint>
+  </security-constraint>
+  <servlet>
+    <servlet-name>Logout</servlet-name>
+    <servlet-class>a00222500.assmt2.logout.LogoutServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Logout</servlet-name>
+    <url-pattern>/jsp-start/logout</url-pattern>
+  </servlet-mapping>
   
+  <servlet>
+    <servlet-name>Translate</servlet-name>
+    <servlet-class>a00222500.assmt2.intl.TranslateServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Translate</servlet-name>
+    <url-pattern>/translate</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>NoInvoker</servlet-name>
+    <servlet-class>a00222500.assmt2.servlet.NoInvokerServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>NoInvoker</servlet-name>
+    <url-pattern>/servlet/*</url-pattern>
+  </servlet-mapping>
 </web-app>
