--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -4,7 +4,7 @@
   <display-name>Assignment2 - The Mammoth Address Book!</display-name>
   
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
   
   <servlet>
@@ -33,78 +33,64 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>ControllerServlet</servlet-name>
-    <url-pattern>/jsp-start/query_database</url-pattern>
+    <url-pattern>/query_database</url-pattern>
   </servlet-mapping>
   
-  <context-param>
-    <param-name>qmessage</param-name>
-    <param-value>Here is the result of your query:</param-value>
-  </context-param>
-  <context-param>
-    <param-name>imessage</param-name>
-    <param-value>Record inserted successfully:</param-value>
-  </context-param>
-  <context-param>
-    <param-name>updatemessage</param-name>
-    <param-value>Record updated successfully:</param-value>
-  </context-param>
-  <context-param>
-    <param-name>deletemessage</param-name>
-    <param-value>Record deleted successfully:</param-value>
-  </context-param>
-  <context-param>
-    <param-name>refreshmessage</param-name>
-    <param-value>Application will return to start page in 5 seconds</param-value>
-  </context-param>
   <login-config>
-    <auth-method>FORM</auth-method>
-    <form-login-config>
-      <form-login-page>/admin/login.jsp</form-login-page>
-      <form-error-page>/admin/login-error.jsp</form-error-page>
-    </form-login-config>
-  </login-config>
-  <security-role>
-    <role-name>user</role-name>
-  </security-role>
-  <security-role>
-    <role-name>admin</role-name>
-  </security-role>
-  <security-constraint>
-    <web-resource-collection>
-      <web-resource-name>Start</web-resource-name>
-      <url-pattern>/jsp-start/*</url-pattern>
-    </web-resource-collection>
-    <auth-constraint>
-      <role-name>user</role-name>
-      <role-name>admin</role-name>
-    </auth-constraint>
-  </security-constraint>
+    	<auth-method>FORM</auth-method>
+    	<form-login-config>
+      		<form-login-page>/login.jsp</form-login-page>
+      		<form-error-page>/login-error.jsp</form-error-page>
+    	</form-login-config>
+  	</login-config>
+  	
+  	<security-role>
+  		<role-name>user</role-name>
+  	</security-role>
+  	<security-role>
+    	<role-name>admin</role-name>
+  	</security-role>
+  
   <security-constraint>
     <web-resource-collection>
       <web-resource-name>User</web-resource-name>
-      <url-pattern>/jsp-user/*</url-pattern>
+      <url-pattern>/WEB-INF/jsp-user/*</url-pattern>
     </web-resource-collection>
     <auth-constraint>
       <role-name>user</role-name>
       <role-name>admin</role-name>
     </auth-constraint>
   </security-constraint>
+  
+  <security-constraint>
+    <web-resource-collection>
+      <web-resource-name>Start</web-resource-name>
+      <url-pattern>/start.jsp</url-pattern>
+    </web-resource-collection>
+    <auth-constraint>
+      <role-name>user</role-name>
+      <role-name>admin</role-name>
+    </auth-constraint>
+  </security-constraint>
+  
   <security-constraint>
     <web-resource-collection>
       <web-resource-name>Admin</web-resource-name>
       <url-pattern>/WEB-INF/jsp-admin/*</url-pattern>
     </web-resource-collection>
     <auth-constraint>
+    	<role-name>user</role-name>
       <role-name>admin</role-name>
     </auth-constraint>
   </security-constraint>
+  
   <servlet>
     <servlet-name>Logout</servlet-name>
     <servlet-class>a00222500.assmt2.logout.LogoutServlet</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>Logout</servlet-name>
-    <url-pattern>/jsp-start/logout</url-pattern>
+    <url-pattern>/logout</url-pattern>
   </servlet-mapping>
   
   <servlet>
